# embedded-shadow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: clippy.yml  rustfmt.yml  test.yml
examples/: access_policy.rs  basic.rs  complex.rs  critical_section.rs  persist.rs  staging.rs
src/: builder.rs  error.rs  helpers.rs  lib.rs  ops.rs  persist.rs  policy.rs  storage.rs  table.rs  types.rs
src/handle/: host.rs
src/shadow/: builder.rs  error.rs  helpers.rs  host.rs  kernel.rs  mod.rs  persist.rs  policy.rs  storage.rs  table.rs  test_support.rs  types.rs
src/shadow/handle/: host.rs  kernel.rs  mod.rs
src/shadow/slice/: macros.rs  mod.rs  ro.rs  rw.rs  wo.rs
src/shadow/staged/: mod.rs  patch.rs
src/shadow/view/: host.rs  host_staged.rs  kernel.rs
src/staged/: internal.rs  mirror.rs  mod.rs  patch.rs
src/view/: host.rs  host_staged.rs  kernel.rs  mod.rs
