[package]
name = "embedded-shadow"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
authors = ["Aaron Qian <aq1018@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "DEPRECATED: This crate has been renamed to embedded-registry"
documentation = "https://docs.rs/embedded-registry"
homepage = "https://github.com/aq1018/embedded-registry"
repository = "https://github.com/aq1018/embedded-registry"
readme = "README.md"
keywords = ["deprecated", "embedded", "no-std", "registers"]
categories = ["embedded", "no-std"]

[workspace]

[badges]
maintenance = { status = "deprecated" }
